--- a/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/src/main/res/values/strings.xml
+++ b/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">GPT3 Comedy Maker</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="version_number">Version 0.1</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
