--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,24 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="version_number">Version 0.1</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="save">Save</string>
     <string name="home">Home</string>
     <string name="favorites">Favorites</string>
     <string name="about">About</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+
+    <string name="about_info">GPT2 Comedy Maker is an application which attempts to create jokes
+        machine learning that implements OpenAIs "General Pretrained Transformer" model. It takes
+        in information from the internet and feedback from the users to improve it\'s comedic
+        ability. </string>
+
+    <string name="dev_team">
+        <u><b>Dev Team</b></u>\n
+        Alexander Lyubomirov\n
+        Bobby Wettig\n
+        Remi Arata\n
+        Xiaosong Wang\n
+        Jesus Torres
+    </string>
 </resources>
